# bugh20

./: .gitignore  README.md
deployer/: Dockerfile  build.sh
lambdas/tika/: Dockerfile  index.js  index.test.js  jest.config.js  package.json  pyproject.toml
lambdas/tika/src/: __init__.py  handler.py
lambdas/tika/tests/: test_tika.py
scripts/: deploy.sh  docker-push.sh  ecr-auth.sh  install.sh  lint.sh  terraform-runner.sh  test.sh
terraform/: ecr.tf  iam.tf  lambda.tf  main.tf  s3.tf
