[tool.poetry]
name = "tika"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
botocore = "^1.19.18"
boto3 = "^1.16.18"
aws-lambda-powertools = "^1.9.0"
aws-lambda-context = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = {version = "^2.10.1", extras = ["toml"]}
pytest-mock = "^3.3.1"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = false
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100